# ucd-csci2421-final

./: AVLNode.cpp  AVLNode.h  AVLTree.cpp  AVLTree.h  AddContact.cpp  AddContact.h  AppFunctions.cpp  AppFunctions.h  CMakeLists.txt  Contact.cpp  Contact.h  ContactDatabase.cpp  ContactDatabase.h  DeleteContact.cpp  DeleteContact.h  EditContact.cpp  EditContact.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  Printing.cpp  Printing.h  README.md  main.cpp  searchFunctions.cpp  searchFunctions.h
